agrego-mediaqueries-medium

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,11 @@ body {
     'c c'
     'd d' 
     }
+@media (min-width:768px){
+    body{
+        grid-template-areas: 
+        'a a'
+        'b c'
+        'd d' 
+    }
+}
